<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarController</string>
    <string name="action_settings">Settings</string>
    <string name="title">Let us drive the car!</string>
    <string name="edit_message">Enter a Message</string>
    <string name="sendUDP">Send by UDP</string>
    <string name="sendTCP">Send by TCP</string>
    <string name="carAddressHeader">Set the address of our car: </string>
    <string name="carIPLabel">IP:</string>
    <string name="carIPSummary">IP address of to controlled car</string>
    <string name="carPortLabel">Port:</string>
    <string name="defaultIP">10.0.1.5</string>
    <string name="defaultPort">8584</string>
    <string name="startDriving">Drive Now</string>
    <string name="title_activity_driving">Driving</string>
    <string name="hello_world">Hello world!</string>
    <string name="steeringLabel">Steering:  </string>
    <string name="powerLabel">Power:  </string>
    <string name="defaultValue">00.00%</string>
    
    <string name="range_setting">Range Settings:</string>
    <string name="middlePower">Power Mid. Val.: </string>
    <string name="offsetPower">Power Range: </string>
    <string name="middleSteering">Steering Mid. Val.: </string>
    <string name="offsetSteering">Steering Range: </string>
    <string name="defaultMiddleValue">4000</string>
    <string name="defaultOffsetValue">3000</string>
    <string name="powerServo">Power Servo Nr.: </string>
    <string name="steeringServo">Steering Servo Nr.:</string>
    <string name="defaultPowerServo">0</string>
    <string name="defaultSteeringServo">1</string>
    <string name="minMessageDelay">Min. Msg. Delay: </string>
    <string name="defaultMessageDelay">50</string>
    <string name="empty"> </string>
    
    <string name="power">Power</string>
    <string name="steering">Steering</string>
    <string name="stop">Stop&amp;Disconnet!</string>
    <string name="start">Connet!</string>
    <string name="getperm">GetPerm!</string>
    <string name="direction">Flip</string>
    <string name="zero">SetZero</string>
    
</resources>