<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DrivingActivity" >

    <TableLayout
        android:id="@+id/displayTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ButtonStart"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewPower"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/powerLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewPowerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultValue"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewSteering"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/steeringLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewSteeringValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultValue"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

    <com.legocar.testingversion.graphics2D.SpeedView
        android:id="@+id/speedView"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true" 
        android:layout_marginLeft="10dp"/>

    <com.legocar.testingversion.graphics2D.SteeringView
        android:id="@+id/steeringView"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_centerVertical="true"
       android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/ButtonStart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/steeringView"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/steeringView"
        android:onClick="start"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/steeringView"
        android:layout_alignLeft="@+id/ButtonStart"
        android:layout_marginBottom="20dp"
        android:onClick="stop"
        android:text="@string/stop" />

    <Button
        android:id="@+id/ButtonDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/steeringView"
        android:layout_alignLeft="@+id/steeringView"
        android:onClick="changeDirection"
        android:text="@string/direction" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/steeringView"
        android:layout_toRightOf="@+id/ButtonDirection"
        android:onClick="steeringReset"
        android:text="@string/zero" />

</RelativeLayout>